<resources>
    <string name="app_name">PayLess</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_barcode">scan barcode</string>
    <string name="barcode">Barcode</string>
    <string name="price">price</string>
    <string name="submit">submit</string>
    <string name="enter_price">enter price</string>
    <string name="list_btn">Create a list</string>
    <string name="barcode_btn">Scan bar-code</string>
    <string name="map_btn">Map</string>
    <string name="custom_font">fonts/DroidSans.ttf</string>
    <string name="closest_store">Choose Store</string>
    <string name="et_price_description">Enter the price</string>
    <string name="btn_submit_price_lbl">Submit</string>
    <string name="uah">UAH</string>
    <string name="choose_shop">Choose shop</string>
    <string name="new_scan">New scan</string>
    <string name="internal_server_error">Внутренняя ошибка сервера</string>
</resources>
