<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@color/btn_background"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingTop="10dp"
        android:text="@string/barcode"
        android:textColor="#FFFFFF" />

    <RelativeLayout
        android:id="@+id/product_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_barcode"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/menu_white_background"
        android:paddingRight="30dp">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/img_product"
            android:padding="10dp"
            android:text="Name"
            android:textColor="@color/background" />

        <!--<TextView-->
        <!--android:id="@+id/tv_description"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_toRightOf="@id/tv_product_name"-->
        <!--android:padding="10dp"-->
        <!--android:text="Description" />-->

        <View
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_alignLeft="@id/tv_product_name"
            android:layout_below="@id/tv_product_name"
            android:layout_toRightOf="@id/img_product"
            android:background="@color/btn_background" />

        <TextView
            android:id="@+id/tv_producer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/img_product"
            android:textColor="@color/background" />

        <!--<TextView-->
        <!--android:id="@+id/tv_country"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBaseline="@id/tv_producer"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_toRightOf="@id/tv_producer"-->
        <!--android:text="Country" />-->
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/send_price_info"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@id/product_info"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@color/menu_white_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/btn_background"
                android:padding="10dp"
                android:text="@string/et_price_description"
                android:textColor="#FFFFFF" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/enter_price"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/et_price"
                    android:background="@color/btn_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_toRightOf="@+id/et_price"
                    android:text="@string/uah"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@color/menu_white_background">

            <TextView
                android:id="@+id/textview_choose_shop"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/btn_background"
                android:padding="10dp"
                android:text="@string/choose_shop"
                android:textColor="#FFFFFF" />

            <Spinner
                android:id="@+id/spinner_closest_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_choose_shop"
                android:layout_marginTop="2dp"
                android:padding="10dp" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit_price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/btn_background"
        android:text="@string/btn_submit_price_lbl"
        android:textColor="#FFFFFF" />

</RelativeLayout>